--- a/final.css
+++ b/final.css
@@ -51,7 +51,9 @@ p {
 .icon-block .material-icons {
   font-size: inherit;
 }
-
+.input-field{
+  color:white;
+}
 footer.page-footer {
   margin: 0;
 }
